log/build_2025-01-27_17-19-38/obstacle_avoidance/stderr.log
  File "/home/adamrustom/ros2_ws/src/obstacle_avoidance/install/obstacle_avoidance/lib/python3.12/site-packages/obstacle_avoidance/obstacle_movement.py", line 68
    self.get_logger().info(f"DRONES ARE ERE}")
                                           ^
SyntaxError: f-string: single '}' is not allowed

